fix: align left important

--- a/src/views/Home.css
+++ b/src/views/Home.css
@@ -9,7 +9,7 @@
         margin-top: 15px;
 
         .services-list-item {
-            text-align: left;
+            text-align: left !important;
             font-size: 15px;
         }
     }
